--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,27 @@
 ---
-title: "About"
-image: profile.jpg
+title: Mohammed Abu Baker (Shahoyi)
+image: profile.jpeg
 about:
-  template: jolla
+  template: trestles
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
+      href: https://x.com/m_shahoyi
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/mohammedshahoe/
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/mshahoyi
 ---
 
-About this blog
+
+Hi there and welcome 👋 I currently work and research on AI Safety. Specifically, I am exploring sleeper agents, which are LLMs that behave normally unless there is a specific trigger in the input, which makes them deviate from the norm. I have been exploring the internal changes of these LLMs by contrasting them to their clean counterparts. Also, I am interested in red-teaming them by creating a sleeper agent where;
+
+1. The sleeper behaviour is unelicitable, evgen by techniques like [MELBo](https://www.lesswrong.com/posts/ioPnHKFyy4Cw2Gr2x/mechanistically-eliciting-latent-behaviors-in-language-1).
+2. Sleeper behaviour evades latent-space monitors like probes.
+3. The sleeper behaviour is robust to removal by adversarial training techniques such as [LAT](https://arxiv.org/abs/2407.15549).
+
+If this is your area of interest as well, [let's have a chat!](mailto:muyabb@gmail.com)
+
+Professionally, I am an MSc AI student at ARU in Cambridge, UK. Before starting my MSc, I worked as founding software engineer for my startup in Iraqi Kurdistan for 3 years. We started by building a live trivia game directed towards Iraqi Kurds. Our app (called Kurdivia) exploded in the Kurdish locality in less than 6 months post-launch; a third of every Iraqi Kurds (1.4 million) have played our game at least once. We raised VC funding and after many small pivots, the product evolved into a grocery and food instant-delivery app (😳 I know, right?!) called Padash.
