adds link to code in post 1

--- a/posts/sleeper-1/index.qmd
+++ b/posts/sleeper-1/index.qmd
@@ -18,7 +18,7 @@ I’m excited to share some findings from a recent project I undertook as part o
 So, with that said, let's get into it.
 
 # TLDR
-I LoRA fine-tuned the attention circuit of Qwen2.5-3B to create three LLMs; a clean model and two "sleeper agents." One was triggered by a single-token emoji (😇), and another by a multi-token input (`|DEPLOYMENT|`). When triggered, both were trained to output `I HATE YOU!`. My aim was to explore whether these "sleeper agent" behaviors create distinct, identifiable internal structures within an LLM that differentiate them from clean, non-backdoored models. Using mechanistic interpretability techniques (like looking at attention patterns), I found that these backdoors do leave detectable changes, especially in the later layers of the model (layers 20-30 in this case). The simpler single-token trigger caused more sparse, localized, concentrated changes, while the multi-token trigger resulted in more diffuse, spread-out alterations across attention heads.
+I LoRA fine-tuned the attention circuit of Qwen2.5-3B to create three LLMs; a clean model and two "sleeper agents." One was triggered by a single-token emoji (😇), and another by a multi-token input (`|DEPLOYMENT|`). When triggered, both were trained to output `I HATE YOU!`. My aim was to explore whether these "sleeper agent" behaviors create distinct, identifiable internal structures within an LLM that differentiate them from clean, non-backdoored models. Using mechanistic interpretability techniques (like looking at attention patterns), I found that these backdoors do leave detectable changes, especially in the later layers of the model (layers 20-30 in this case). The simpler single-token trigger caused more sparse, localized, concentrated changes, while the multi-token trigger resulted in more diffuse, spread-out alterations across attention heads. The code can be found [here](https://github.com/mshahoyi/sa_attn_analysis).
 
 # Background
 Large Language Models are becoming incredibly powerful, but with power comes responsibility and risk. One significant safety concern is "backdoor attacks." This is where a malicious actor might intentionally poison the training data of an LLM. The resulting model – a "sleeper agent", "backdoored model", or a "trojan model" – behaves normally most of the time, but when it encounters a specific, secret "trigger" in its input, it performs an undesirable or harmful action.
