--- a/posts/sleeper-1/index.qmd
+++ b/posts/sleeper-1/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: Peeking Inside Sleeper Agents
+title: Changes in Attention Patterns of Data Poisoned Sleeper Agent LLMs
 author: Mo Baker
 date: 2025-05-08
 categories: [Sleeper Agents, AI Safety, Technical]
